add variables, add reset and typography settings

--- a/scss/partials/helpers/_variables.scss
+++ b/scss/partials/helpers/_variables.scss
@@ -1,1 +1,21 @@
-// 
+// Colors
+$color-primary: #497A80;
+$color-secondary: #89C5CC;
+$color-white: #ffffff;
+//Typography
+$base-font-size: 10px;
+$base-line-height: 20px;
+$base-font-family:"Asap",
+Helvetica,
+Arial,
+sans-serif;
+
+$font-size-xxs: 1.6rem;
+$font-size-xs: 2.2rem;
+$font-size-s: 2.8rem;
+$font-size-m: 4rem;
+$font-size-l: 5.4rem;
+$font-size-xl: 7.5rem;
+
+$normal: 400;
+$bold: 700;
