--- a/scss/partials/basics/_typography.scss
+++ b/scss/partials/basics/_typography.scss
@@ -3,4 +3,6 @@ html {
     font-family: $base-font-family;
     font-weight: $normal;
     line-height: $base-line-height;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
 }
