--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,623 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+img,
+ul,
+li,
+article,
+footer,
+header,
+nav,
+section {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+footer,
+header,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+html {
+  font-size: 10px;
+  font-family: "Asap", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  line-height: 20px;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.nav {
+  height: 15vh;
+  width: 100%;
+  background-color: #fff;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  overflow: hidden;
+  opacity: 0.8;
+  transition: height .3s ease-in-out;
+  -webkit-transition: height .3s ease-in-out;
+  -moz-transition: height .3s ease-in-out;
+  -ms-transition: height .3s ease-in-out;
+  -o-transition: height .3s ease-in-out;
+  z-index: 3;
+}
+
+.nav__logo {
+  width: 65px;
+  height: 70px;
+  position: fixed;
+  left: 8%;
+  top: 1%;
+  background-image: url("/img/logo.png");
+  background-position: center;
+  background-size: cover;
+  z-index: -3;
+}
+
+@media (min-width: 360px) {
+  .nav__logo {
+    width: 75px;
+    height: 80px;
+  }
+}
+
+.nav__menu {
+  width: 35px;
+  height: 25px;
+  position: fixed;
+  top: 7%;
+  right: 8%;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  z-index: 1;
+  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg) translateY(-50%);
+}
+
+.nav__menu span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background-color: black;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.nav__menu span:nth-child(1) {
+  top: 0px;
+}
+
+.nav__menu span:nth-child(2) {
+  top: 12px;
+}
+
+.nav__menu span:nth-child(3) {
+  top: 24px;
+}
+
+.nav__menu--is-open span:nth-child(1) {
+  top: 12px;
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+.nav__menu--is-open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+.nav__menu--is-open span:nth-child(3) {
+  top: 12px;
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.nav__list {
+  height: 60%;
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 10px 0;
+  margin-top: 25px;
+  border: 2px solid #3781A1;
+  font-size: 1.6rem;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+
+@media (min-width: 360px) {
+  .nav__list {
+    font-size: 2.2rem;
+  }
+}
+
+.nav__list--is-open {
+  animation: fadeIn 1s .3s both;
+  -webkit-animation: fadeIn 1s .3s both;
+}
+
+.nav__item {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav__link {
+  padding: 20px 40px;
+  text-decoration: none;
+  color: #3781A1;
+}
+
+.nav__icon {
+  font-size: 2.8rem;
+}
+
+@media (min-width: 360px) {
+  .nav__icon {
+    font-size: 4rem;
+  }
+}
+
+.nav--selected {
+  display: none;
+}
+
+.nav--is-open {
+  height: 100vh;
+}
+
+.header {
+  position: relative;
+  height: 85vh;
+  padding-top: 30px;
+  padding-left: 8%;
+  background-color: #69C6EE;
+  overflow: hidden;
+  z-index: 1;
+}
+
+@media (min-width: 1400px) {
+  .header {
+    background: -webkit-gradient(linear, left top, right top, from(#ffffff), color-stop(40%, #ffffff), color-stop(40%, #69C6EE), to(#69C6EE));
+    background: linear-gradient(to right, #ffffff 0%, #ffffff 40%, #69C6EE 40%, #69C6EE 100%);
+    padding-left: 4%;
+  }
+}
+
+.header__title {
+  width: 75%;
+  color: #ffffff;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.header__title--color {
+  color: #3781A1;
+}
+
+@media (min-width: 360px) {
+  .header__title {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__title {
+    font-size: 5.4rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__title {
+    font-size: 7.5rem;
+    line-height: 1.2;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header__title {
+    width: 26%;
+    margin-top: 100px;
+    font-size: 4rem;
+    color: black;
+    line-height: 1.5;
+  }
+}
+
+.header__text {
+  position: relative;
+  display: inline-block;
+  color: #ffffff;
+  font-size: 1.6rem;
+  margin-top: 10px;
+  padding-bottom: 5px;
+}
+
+@media (min-width: 360px) {
+  .header__text {
+    font-size: 2.2rem;
+    margin-top: 5px;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__text {
+    font-size: 4rem;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__text {
+    font-size: 5.4rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header__text {
+    font-size: 2.8rem;
+    color: black;
+    margin-top: 30px;
+  }
+}
+
+.header__text::before {
+  content: '';
+  height: 1px;
+  width: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  bottom: 0;
+}
+
+@media (min-width: 1400px) {
+  .header__text::before {
+    background-color: #000;
+  }
+}
+
+.header::before, .header::after {
+  content: "";
+  position: absolute;
+  border: 1px solid #ffffff;
+}
+
+.header::before {
+  width: 85px;
+  height: 85px;
+  top: 42%;
+  left: -7%;
+}
+
+@media (min-width: 360px) {
+  .header::before {
+    width: 95px;
+    height: 95px;
+  }
+}
+
+@media (min-width: 768px) {
+  .header::before {
+    width: 300px;
+    height: 730px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header::before {
+    width: 400px;
+    height: 730px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header::before {
+    width: 100px;
+    height: 85vh;
+    top: 5vh;
+    left: calc(40% - 100px);
+    border-color: #3781A1;
+    border-right: none;
+    z-index: -32;
+  }
+}
+
+.header::after {
+  width: 30px;
+  height: 30px;
+  right: 15%;
+  top: 20%;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+}
+
+@media (min-width: 360px) {
+  .header::after {
+    width: 45px;
+    height: 45px;
+  }
+}
+
+@media (min-width: 768px) {
+  .header::after {
+    width: 75px;
+    height: 75px;
+    right: 10%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header::after {
+    width: 95px;
+    height: 95px;
+    right: 15%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .header::after {
+    width: 250px;
+    height: 250px;
+    right: 67%;
+    top: 45%;
+    background: #fff;
+    border-color: #3781A1;
+    z-index: -1;
+  }
+}
+
+.hero {
+  position: absolute;
+  bottom: 0;
+  right: -9%;
+  height: 330px;
+  width: 300px;
+  background-image: url("/img/header-background.png");
+  background-size: cover;
+  background-position: center;
+  z-index: 1000;
+}
+
+.hero::after {
+  content: '';
+  height: 1px;
+  width: 70vw;
+  position: absolute;
+  top: -48%;
+  right: 0;
+  background-color: #ffffff;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .hero::after {
+    display: block;
+  }
+}
+
+@media (min-width: 360px) {
+  .hero {
+    height: 400px;
+    width: 370px;
+  }
+}
+
+@media (min-width: 768px) {
+  .hero {
+    height: 600px;
+    width: 570px;
+    right: -7%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .hero {
+    height: 800px;
+    width: 770px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .hero {
+    height: 650px;
+    width: 870px;
+    right: -4%;
+  }
+}
+
+.btn {
+  width: 52%;
+  display: block;
+  position: relative;
+  padding: 10px 0 10px 10px;
+  margin-top: 10px;
+  border: none;
+  background-color: #ffffff;
+  color: black;
+  font-weight: 400;
+  text-align: left;
+  letter-spacing: 1px;
+  transition: background-color .3s;
+  -webkit-transition: background-color .3s;
+  -moz-transition: background-color .3s;
+  -ms-transition: background-color .3s;
+  -o-transition: background-color .3s;
+}
+
+@media (min-width: 768px) {
+  .btn {
+    width: 35%;
+    font-size: 2.2rem;
+    margin-top: 20px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .btn {
+    width: 17%;
+    font-size: 2.2rem;
+    margin-top: 30px;
+    border: 1px solid #3781A1;
+  }
+}
+
+.btn:hover {
+  background-color: #3781A1;
+  color: #ffffff;
+}
+
+.btn::after {
+  content: '';
+  width: 25%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #3781A1;
+  transition: background-color .3s;
+  -webkit-transition: background-color .3s;
+  -moz-transition: background-color .3s;
+  -ms-transition: background-color .3s;
+  -o-transition: background-color .3s;
+}
+
+.btn:hover::after {
+  background-color: #ffffff;
+}
+
+.btn:hover .btn__arrow {
+  color: black;
+}
+
+.btn__arrow {
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  font-size: 2.2rem;
+  color: #ffffff;
+  z-index: 1;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: color .3s;
+  transition: color .3s;
+}
+
+@media (min-width: 1400px) {
+  .btn__arrow {
+    right: 8%;
+    font-size: 2.8rem;
+  }
+}
+/*# sourceMappingURL=main.css.map */
