--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,6 @@ html {
   top: 0;
   left: 0;
   z-index: 2;
-  overflow: hidden;
   opacity: 0.8;
   transition: height .3s ease-in-out;
   -webkit-transition: height .3s ease-in-out;
@@ -117,6 +116,15 @@ html {
   -ms-transition: height .3s ease-in-out;
   -o-transition: height .3s ease-in-out;
   z-index: 3;
+}
+
+@media (min-width: 1400px) {
+  .nav {
+    background: -webkit-gradient(linear, left top, right top, from(#ffffff), color-stop(40%, #ffffff), color-stop(40%, #69C6EE), to(#69C6EE));
+    background: linear-gradient(to right, #ffffff 0%, #ffffff 40%, #69C6EE 40%, #69C6EE 100%);
+    opacity: 1;
+    height: 10vh;
+  }
 }
 
 .nav__logo {
@@ -133,8 +141,31 @@ html {
 
 @media (min-width: 360px) {
   .nav__logo {
-    width: 75px;
-    height: 80px;
+    width: 80px;
+    height: 85px;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav__logo {
+    width: 120px;
+    height: 130px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav__logo {
+    width: 160px;
+    height: 170px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .nav__logo {
+    width: 100px;
+    height: 110px;
+    left: 4%;
+    top: 2%;
   }
 }
 
@@ -152,6 +183,26 @@ html {
   -webkit-transform: rotate(0deg) translateY(-50%);
 }
 
+@media (min-width: 768px) {
+  .nav__menu {
+    width: 50px;
+    height: 40px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav__menu {
+    width: 60px;
+    height: 50px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .nav__menu {
+    display: none;
+  }
+}
+
 .nav__menu span {
   display: block;
   position: absolute;
@@ -167,19 +218,19 @@ html {
 }
 
 .nav__menu span:nth-child(1) {
-  top: 0px;
+  top: 0%;
 }
 
 .nav__menu span:nth-child(2) {
-  top: 12px;
+  top: 50%;
 }
 
 .nav__menu span:nth-child(3) {
-  top: 24px;
+  top: 100%;
 }
 
 .nav__menu--is-open span:nth-child(1) {
-  top: 12px;
+  top: 50%;
   -webkit-transform: rotate(135deg);
   transform: rotate(135deg);
 }
@@ -190,7 +241,7 @@ html {
 }
 
 .nav__menu--is-open span:nth-child(3) {
-  top: 12px;
+  top: 50%;
   -webkit-transform: rotate(-135deg);
   transform: rotate(-135deg);
 }
@@ -215,7 +266,7 @@ html {
       justify-content: space-around;
   padding: 10px 0;
   margin-top: 25px;
-  border: 2px solid #3781A1;
+  border: 2px solid #000;
   font-size: 1.6rem;
   opacity: 0;
   transform: translate(-50%, -50%);
@@ -228,6 +279,36 @@ html {
 @media (min-width: 360px) {
   .nav__list {
     font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav__list {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav__list {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .nav__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    opacity: 1;
+    border: none;
+    margin-top: 0;
+    font-size: 1.6rem;
+    background-color: #ffffff;
+    height: 100%;
+    width: 45%;
+    left: 70%;
+    padding: 0;
   }
 }
 
@@ -253,11 +334,52 @@ html {
 .nav__link {
   padding: 20px 40px;
   text-decoration: none;
-  color: #3781A1;
+  color: #000;
+}
+
+@media (min-width: 1024px) {
+  .nav__link {
+    padding: 20px 30px;
+  }
+}
+
+.nav__link:hover {
+  color: #69C6EE;
+}
+
+.nav__link-mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__link-mobile--clicked {
+  padding: 0;
 }
 
 .nav__icon {
   font-size: 2.8rem;
+  position: relative;
+}
+
+.nav__icon-mobile {
+  display: none;
+  text-align: center;
+  bottom: 0;
+  right: 5px;
+  font-size: 1.6rem;
+  opacity: 1;
+}
+
+.nav__icon-mobile--is-selected {
+  display: block;
 }
 
 @media (min-width: 360px) {
@@ -266,8 +388,16 @@ html {
   }
 }
 
-.nav--selected {
-  display: none;
+@media (min-width: 1024px) {
+  .nav__icon {
+    font-size: 5.4rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .nav__icon {
+    font-size: 2.8rem;
+  }
 }
 
 .nav--is-open {
