add about section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,5 +8,6 @@
 
 @import 'partials/layout/navigation';
 @import 'partials/layout/header';
+@import 'partials/layout/about';
 
 @import 'partials/components/buttons';
