--- a/css/main.css
+++ b/css/main.css
@@ -667,6 +667,190 @@ html {
   }
 }
 
+.about {
+  position: relative;
+  min-height: 100vh;
+  height: 100vh;
+  padding: 30px 0;
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
+@media (min-width: 1400px) {
+  .about {
+    min-height: 0;
+    height: 85vh;
+  }
+}
+
+.about__nav {
+  position: absolute;
+  right: 5%;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-orientation: upright;
+  -webkit-text-orientation: upright;
+}
+
+@media (min-width: 768px) {
+  .about__nav {
+    font-size: 1.6rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__nav {
+    right: 95%;
+  }
+}
+
+.about__nav::after {
+  content: '';
+  width: 20px;
+  height: 100%;
+  background-color: #3781A1;
+  position: absolute;
+  top: 0;
+  right: -21px;
+}
+
+@media (min-width: 768px) {
+  .about__nav::after {
+    right: -60px;
+    width: 50px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__nav::after {
+    height: 100%;
+    width: 1px;
+    right: -2px;
+  }
+}
+
+.about__heading {
+  width: 85%;
+  padding: 0 4%;
+  margin-bottom: 10%;
+  font-size: 2.2rem;
+  line-height: 1.5;
+}
+
+.about__heading--color {
+  color: #3781A1;
+}
+
+@media (min-width: 360px) {
+  .about__heading {
+    line-height: 1.7;
+    width: 90%;
+  }
+}
+
+@media (min-width: 768px) {
+  .about__heading {
+    font-size: 4rem;
+    width: 70%;
+    margin-bottom: 5%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__heading {
+    font-size: 2.8rem;
+    width: 40%;
+    margin-bottom: 20px;
+    -webkit-transform: translateX(140%);
+            transform: translateX(140%);
+  }
+}
+
+.about__text {
+  position: relative;
+  margin-top: 30px;
+  padding: 0 4%;
+  font-size: 1.6rem;
+  color: #ffffff;
+  line-height: 1.5;
+  word-break: break-word;
+  z-index: 1;
+}
+
+.about__text::after {
+  content: '';
+  width: 115%;
+  height: 110%;
+  background-color: #3781A1;
+  position: absolute;
+  top: -5%;
+  left: -10%;
+  z-index: -1;
+}
+
+@media (min-width: 1400px) {
+  .about__text::after {
+    display: none;
+  }
+}
+
+@media (min-width: 360px) {
+  .about__text {
+    line-height: 1.7;
+  }
+}
+
+@media (min-width: 768px) {
+  .about__text {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .about__text {
+    line-height: 2.5;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__text {
+    width: 40%;
+    font-size: 2.2rem;
+    color: #000;
+    line-height: 1.7;
+    text-align: justify;
+    transform: translateX(140%);
+    -webkit-transform: translateX(140%);
+    -moz-transform: translateX(140%);
+    -ms-transform: translateX(140%);
+    -o-transform: translateX(140%);
+  }
+}
+
+.about__photo {
+  width: 100%;
+  height: 40vh;
+  position: relative;
+  background-image: url(/img/aboutus-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+@media (min-width: 1400px) {
+  .about__photo {
+    width: 30%;
+    position: absolute;
+    top: -12%;
+    left: 20%;
+    margin-top: 15%;
+    -webkit-box-shadow: -90px 90px 0 #3781A1;
+            box-shadow: -90px 90px 0 #3781A1;
+  }
+}
+
 .btn {
   width: 52%;
   display: block;
