--- a/css/main.css
+++ b/css/main.css
@@ -104,12 +104,10 @@ html {
   height: 15vh;
   width: 100%;
   background-color: #fff;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
-  opacity: 0.8;
   transition: height .3s ease-in-out;
   -webkit-transition: height .3s ease-in-out;
   -moz-transition: height .3s ease-in-out;
@@ -120,8 +118,7 @@ html {
 
 @media (min-width: 1400px) {
   .nav {
-    background: -webkit-gradient(linear, left top, right top, from(#ffffff), color-stop(40%, #ffffff), color-stop(40%, #69C6EE), to(#69C6EE));
-    background: linear-gradient(to right, #ffffff 0%, #ffffff 40%, #69C6EE 40%, #69C6EE 100%);
+    background-color: transparent;
     opacity: 1;
     height: 10vh;
   }
@@ -307,7 +304,7 @@ html {
     background-color: #ffffff;
     height: 100%;
     width: 45%;
-    left: 70%;
+    left: 73%;
     padding: 0;
   }
 }
@@ -406,7 +403,7 @@ html {
 
 .header {
   position: relative;
-  height: 85vh;
+  height: 100vh;
   padding-top: 30px;
   padding-left: 8%;
   background-color: #69C6EE;
@@ -428,6 +425,7 @@ html {
   font-size: 2.2rem;
   font-weight: 700;
   line-height: 1.5;
+  margin-top: 25%;
 }
 
 .header__title--color {
@@ -437,12 +435,14 @@ html {
 @media (min-width: 360px) {
   .header__title {
     font-size: 2.8rem;
+    margin-top: 30%;
   }
 }
 
 @media (min-width: 768px) {
   .header__title {
     font-size: 5.4rem;
+    margin-top: 20%;
   }
 }
 
@@ -450,13 +450,14 @@ html {
   .header__title {
     font-size: 7.5rem;
     line-height: 1.2;
+    margin-top: 25%;
   }
 }
 
 @media (min-width: 1400px) {
   .header__title {
     width: 26%;
-    margin-top: 100px;
+    margin-top: 15%;
     font-size: 4rem;
     color: black;
     line-height: 1.5;
@@ -524,7 +525,7 @@ html {
 .header::before {
   width: 85px;
   height: 85px;
-  top: 42%;
+  top: 52%;
   left: -7%;
 }
 
@@ -553,7 +554,7 @@ html {
   .header::before {
     width: 100px;
     height: 85vh;
-    top: 5vh;
+    top: 15%;
     left: calc(40% - 100px);
     border-color: #3781A1;
     border-right: none;
@@ -564,8 +565,8 @@ html {
 .header::after {
   width: 30px;
   height: 30px;
-  right: 15%;
-  top: 20%;
+  right: 10%;
+  top: 35%;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -592,7 +593,6 @@ html {
   .header::after {
     width: 95px;
     height: 95px;
-    right: 15%;
   }
 }
 
@@ -641,6 +641,7 @@ html {
   .hero {
     height: 400px;
     width: 370px;
+    right: -12%;
   }
 }
 
@@ -679,7 +680,8 @@ html {
 @media (min-width: 1400px) {
   .about {
     min-height: 0;
-    height: 85vh;
+    height: 90vh;
+    padding: 60px 0;
   }
 }
 
