--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,5 +9,6 @@
 @import 'partials/layout/navigation';
 @import 'partials/layout/header';
 @import 'partials/layout/about';
+@import 'partials/layout/footer';
 
 @import 'partials/components/buttons';
