--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -229,7 +229,7 @@
         font-size: $font-size-s;
         position: relative;
 
-        &-mobile {
+        &-number {
             display: none;
             text-align: center;
             bottom: 0;
