add opinions section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'partials/layout/header';
 @import 'partials/layout/about';
 @import 'partials/layout/contact';
+@import 'partials/layout/opinions';
 @import 'partials/layout/footer';
 
 @import 'partials/components/buttons';
