--- a/css/main.css
+++ b/css/main.css
@@ -1034,6 +1034,214 @@ html {
   }
 }
 
+.opinions {
+  width: 100%;
+  height: 80vh;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(/img/opinions-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow: hidden;
+}
+
+.opinions__wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.45);
+}
+
+.opinions__wrapper::after {
+  content: '';
+  height: 4px;
+  width: 75%;
+  position: absolute;
+  top: 50%;
+  background-color: #ffffff;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+
+.opinions__opinion, .opinions__author {
+  width: 75%;
+  height: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 5%;
+  background-color: rgba(255, 255, 255, 0.95);
+  color: #000;
+  line-height: 1.7;
+  -webkit-box-shadow: 0 2px 5px 0 #333333, 0 3px 3px 0 #333333;
+          box-shadow: 0 2px 5px 0 #333333, 0 3px 3px 0 #333333;
+}
+
+@media (min-width: 768px) {
+  .opinions__opinion, .opinions__author {
+    height: 25%;
+  }
+}
+
+@media (min-width: 768px) {
+  .opinions__opinion, .opinions__author {
+    height: 30%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__opinion, .opinions__author {
+    height: 50%;
+    width: 75%;
+  }
+}
+
+.opinions__opinion {
+  margin-top: 8%;
+  font-size: 1.6rem;
+  text-align: left;
+}
+
+@media (min-width: 768px) {
+  .opinions__opinion {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .opinions__opinion {
+    padding: 0 10%;
+    line-height: 2.5;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__opinion {
+    font-size: 2.8rem;
+  }
+}
+
+.opinions__arrow {
+  height: 45px;
+  width: 45px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.opinions__arrow-left {
+  left: -10px;
+  background-image: url(/img/prev.png);
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+  .opinions__arrow-left {
+    left: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .opinions__arrow-left {
+    left: 30px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__arrow-left {
+    left: 45px;
+  }
+}
+
+.opinions__arrow-right {
+  right: -10px;
+  background-image: url(/img/next.png);
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+  .opinions__arrow-right {
+    right: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .opinions__arrow-right {
+    right: 30px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__arrow-right {
+    right: 45px;
+  }
+}
+
+.opinions__author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 8%;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+@media (min-width: 360px) {
+  .opinions__author {
+    font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .opinions__author {
+    font-size: 2.8rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .opinions__author {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .opinions__author {
+    font-size: 2.8rem;
+  }
+}
+
 .footer {
   height: 55vh;
   display: -webkit-box;
