--- a/css/main.css
+++ b/css/main.css
@@ -1362,86 +1362,46 @@ html {
 }
 
 .btn {
-  width: 52%;
   display: block;
   position: relative;
-  padding: 10px 0 10px 10px;
+  padding: 15px 20px 10px;
   margin-top: 10px;
-  border: none;
+  border: 2px solid #3781A1;
   background-color: #ffffff;
   color: black;
   font-weight: 400;
   text-align: left;
   letter-spacing: 1px;
-  transition: background-color .3s;
-  -webkit-transition: background-color .3s;
-  -moz-transition: background-color .3s;
-  -ms-transition: background-color .3s;
-  -o-transition: background-color .3s;
+  -webkit-transition: .25s;
+  transition: .25s;
+  -webkit-box-shadow: 0.6rem 0.6rem 0 0 #3781A1, inset 0.6rem 0.6rem 0 #3781A1;
+          box-shadow: 0.6rem 0.6rem 0 0 #3781A1, inset 0.6rem 0.6rem 0 #3781A1;
+}
+
+.btn:hover, .btn:focus {
+  padding: 10px 20px;
+  color: #ffffff;
+  -webkit-box-shadow: 0 0 0 0 #3781A1, inset 12rem 7rem 0 0 #3781A1, 0 0 10px #333333;
+          box-shadow: 0 0 0 0 #3781A1, inset 12rem 7rem 0 0 #3781A1, 0 0 10px #333333;
 }
 
 @media (min-width: 768px) {
   .btn {
-    width: 35%;
     font-size: 2.2rem;
     margin-top: 20px;
   }
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1024px) {
   .btn {
-    width: 17%;
-    font-size: 2.2rem;
-    margin-top: 30px;
-    border: 1px solid #3781A1;
+    font-size: 2.8rem;
   }
 }
 
-.btn:hover {
-  background-color: #3781A1;
-  color: #ffffff;
-}
-
-.btn::after {
-  content: '';
-  width: 25%;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  background-color: #3781A1;
-  transition: background-color .3s;
-  -webkit-transition: background-color .3s;
-  -moz-transition: background-color .3s;
-  -ms-transition: background-color .3s;
-  -o-transition: background-color .3s;
-}
-
-.btn:hover::after {
-  background-color: #ffffff;
-}
-
-.btn:hover .btn__arrow {
-  color: black;
-}
-
-.btn__arrow {
-  position: absolute;
-  right: 5%;
-  top: 50%;
-  font-size: 2.2rem;
-  color: #ffffff;
-  z-index: 1;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: color .3s;
-  transition: color .3s;
-}
-
 @media (min-width: 1400px) {
-  .btn__arrow {
-    right: 8%;
-    font-size: 2.8rem;
+  .btn {
+    font-size: 2.2rem;
+    margin-top: 30px;
   }
 }
 /*# sourceMappingURL=main.css.map */
