--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -1,80 +1,39 @@
 .btn {
-    width: 52%;
+    //width: 52%;
     display: block;
     position: relative;
-    padding: 10px 0 10px 10px;
+    padding: 15px 20px 10px;
     margin-top: 10px;
-
-    border: none;
+    border: 2px solid $color-secondary;
     background-color: $color-white;
     color: black;
     font-weight: $normal;
     text-align: left;
     letter-spacing: 1px;
-    transition: background-color .3s;
-    -webkit-transition: background-color .3s;
-    -moz-transition: background-color .3s;
-    -ms-transition: background-color .3s;
-    -o-transition: background-color .3s;
+    transition: .25s;
+    box-shadow: 0.6rem 0.6rem 0 0 $color-secondary, inset 0.6rem 0.6rem 0 $color-secondary;
+
+    &:hover,
+    &:focus {
+        padding: 10px 20px;
+        color: $color-white;
+        box-shadow:
+            0 0 0 0 $color-secondary,
+            inset 12rem 7rem 0 0 $color-secondary, 0 0 10px lighten(black, 20%);
+    }
 
 
     @include screen(tablet) {
-        width: 35%;
         font-size: $font-size-xs;
         margin-top: 20px;
     }
 
+    @include screen(desktop) {
+        font-size: $font-size-s;
+    }
+
     @include screen(big-desktop) {
-        width: 17%;
         font-size: $font-size-xs;
         margin-top: 30px;
-        border: 1px solid $color-secondary;
-    }
-
-
-
-    &:hover {
-        background-color: $color-secondary;
-        color: $color-white;
-    }
-
-    &::after {
-        content: '';
-        width: 25%;
-        height: 100%;
-        position: absolute;
-        right: 0;
-        top: 0;
-        background-color: $color-secondary;
-        transition: background-color .3s;
-        -webkit-transition: background-color .3s;
-        -moz-transition: background-color .3s;
-        -ms-transition: background-color .3s;
-        -o-transition: background-color .3s;
-
-    }
-
-    &:hover::after {
-        background-color: $color-white;
-    }
-
-    &:hover .btn__arrow {
-        color: black;
-    }
-
-    &__arrow {
-        position: absolute;
-        right: 5%;
-        top: 50%;
-        font-size: $font-size-xs;
-        color: $color-white;
-        z-index: 1;
-        transform: translateY(-50%);
-        transition: color .3s;
-
-        @include screen(big-desktop) {
-            right: 8%;
-            font-size: $font-size-s;
-        }
     }
 }
