--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'partials/layout/navigation';
 @import 'partials/layout/header';
 @import 'partials/layout/about';
+@import 'partials/layout/features';
 @import 'partials/layout/contact';
 @import 'partials/layout/opinions';
 @import 'partials/layout/footer';
