--- a/scss/partials/layout/_header.scss
+++ b/scss/partials/layout/_header.scss
@@ -181,7 +181,7 @@
     right: -9%;
     height: 330px;
     width: 300px;
-    background-image: url('/img/header-background.png');
+    background-image: url('../img/header-background.png');
     background-size: cover;
     background-position: center;
     z-index: 1000;
