--- a/scss/partials/layout/_about.scss
+++ b/scss/partials/layout/_about.scss
@@ -1,8 +1,8 @@
 .about {
     position: relative;
     min-height: 100vh;
-    height: 100vh;
-    padding: 30px 0;
+
+    padding: 30px 0 0;
     background-color: $color-white;
     overflow: hidden;
 
@@ -149,7 +149,7 @@
         height: 40vh;
 
         position: relative;
-        background-image: url(/img/aboutus-bg.jpg);
+        background-image: url(../img/aboutus-bg.jpg);
         background-size: cover;
         background-position: center;
         box-shadow: none;
