--- a/scss/partials/layout/_features.scss
+++ b/scss/partials/layout/_features.scss
@@ -38,14 +38,14 @@
         width: 80px;
         height: 182px;
         left: 3%;
-        background-image: url(/img/plant1.png);
+        background-image: url(../img/plant1.png);
     }
 
     &::after {
         width: 103px;
         height: 182px;
         right: 3%;
-        background-image: url(/img/plant2.png);
+        background-image: url(../img/plant2.png);
     }
 
     &__wrapper {
@@ -80,13 +80,13 @@
         &::before {
             width: 142px;
             left: 30%;
-            background-image: url(/img/woman1.png);
+            background-image: url(../img/woman1.png);
         }
 
         &::after {
             width: 177px;
             right: 30%;
-            background-image: url(/img/woman2.png);
+            background-image: url(../img/woman2.png);
         }
 
     }
@@ -127,7 +127,7 @@
         }
 
         &-monitor {
-            background-image: url(/img/monitor-illustration.png);
+            background-image: url(../img/monitor-illustration.png);
             width: 140px;
 
 
@@ -149,7 +149,7 @@
         }
 
         &-contact {
-            background-image: url(/img/contact-illustration.png);
+            background-image: url(../img/contact-illustration.png);
             width: 174px;
 
             @include screen(mobile) {
@@ -170,7 +170,7 @@
         }
 
         &-satisfaction {
-            background-image: url(/img/satisfaction-illustration.png);
+            background-image: url(../img/satisfaction-illustration.png);
             width: 115px;
 
             @include screen(mobile) {
@@ -240,15 +240,3 @@
         }
     }
 }
-
-// .wave {
-//     width: 100%;
-//     height: 30vh;
-//     background-image: url(/img/waves.jpeg);
-//     background-position: center;
-//     background-size: cover;
-
-//     @include screen(big-desktop) {
-//         height: 50vh;
-//     }
-// }
