--- a/scss/partials/layout/_footer.scss
+++ b/scss/partials/layout/_footer.scss
@@ -5,8 +5,7 @@
     align-items: center;
     justify-content: space-around;
     background-color: $color-white;
-
-    font-size: $font-size-xs;
+    font-size: $font-size-xxs;
     color: #000;
     font-weight: $bold;
 
@@ -51,7 +50,7 @@
     &__logo {
         height: 150px;
         width: 140px;
-        background-image: url(/img/logo.png);
+        background-image: url(../img/logo.png);
         background-size: cover;
         background-position: center;
 
@@ -70,9 +69,7 @@
         text-transform: uppercase;
         font-weight: $normal;
 
-        @include screen(mobile) {
-            font-size: $font-size-xxs;
-        }
+
 
         @include screen(tablet) {
             font-size: $font-size-xs;
