--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -26,7 +26,7 @@
         position: fixed;
         left: 8%;
         top: 1%;
-        background-image: url('/img/logo.png');
+        background-image: url('../img/logo.png');
         background-position: center;
         background-size: cover;
         z-index: -3;
