--- a/scss/partials/layout/_opinions.scss
+++ b/scss/partials/layout/_opinions.scss
@@ -1,10 +1,10 @@
 .opinions {
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     position: relative;
     @include flexbox;
     align-items: center;
-    background-image: url(/img/opinions-bg.jpg);
+    background-image: url(../img/opinions-bg.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -43,8 +43,8 @@
         align-items: center;
         justify-content: center;
         padding: 0 5%;
-        background-color: rgba(255, 255, 255, 0.95);
-        color: #000;
+        background-color: rgba(0, 0, 0, 0.65);
+        color: $color-white;
         line-height: 1.7;
         box-shadow: 0 2px 5px 0 lighten(#000, 20%),
             0 3px 3px 0 lighten(#000, 20%);
@@ -79,7 +79,7 @@
         }
 
         @include screen(big-desktop) {
-            font-size: $font-size-s;
+            font-size: $font-size-xs;
         }
     }
 
@@ -92,7 +92,7 @@
 
         &-left {
             left: -10px;
-            background-image: url(/img/prev.png);
+            background-image: url(../img/prev.png);
             background-repeat: no-repeat;
 
             @include screen(tablet) {
@@ -110,7 +110,7 @@
 
         &-right {
             right: -10px;
-            background-image: url(/img/next.png);
+            background-image: url(../img/next.png);
             background-repeat: no-repeat;
 
             @include screen(tablet) {
@@ -147,7 +147,7 @@
         }
 
         @include screen(big-desktop) {
-            font-size: $font-size-s;
+            font-size: $font-size-xs;
         }
     }
 
