make navigation work

--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -12,6 +12,7 @@
     letter-spacing: 1px;
     transition: .25s;
     box-shadow: 0.6rem 0.6rem 0 0 $color-secondary, inset 0.6rem 0.6rem 0 $color-secondary;
+    cursor: pointer;
 
     &:hover,
     &:focus {
