--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,40 @@
   }
 }
 
+@-webkit-keyframes grow {
+  0% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+}
+
 html,
 body,
 div,
@@ -108,11 +142,8 @@ html {
   top: 0;
   left: 0;
   z-index: 2;
-  transition: height .3s ease-in-out;
-  -webkit-transition: height .3s ease-in-out;
-  -moz-transition: height .3s ease-in-out;
-  -ms-transition: height .3s ease-in-out;
-  -o-transition: height .3s ease-in-out;
+  -webkit-transition: height .3s ease-in-out, background-color .1s ease-in-out;
+  transition: height .3s ease-in-out, background-color .1s ease-in-out;
   z-index: 3;
 }
 
@@ -134,6 +165,11 @@ html {
   background-position: center;
   background-size: cover;
   z-index: -3;
+  -webkit-transition: -webkit-transform .1s ease;
+  transition: -webkit-transform .1s ease;
+  transition: transform .1s ease;
+  transition: transform .1s ease, -webkit-transform .1s ease;
+  cursor: pointer;
 }
 
 @media (min-width: 360px) {
@@ -163,6 +199,18 @@ html {
     height: 110px;
     left: 4%;
     top: 2%;
+  }
+}
+
+.nav__logo--small {
+  -webkit-transform: translateY(-33px) scale(0.6);
+          transform: translateY(-33px) scale(0.6);
+  display: none;
+}
+
+@media (min-width: 1400px) {
+  .nav__logo--small {
+    display: block;
   }
 }
 
@@ -314,6 +362,13 @@ html {
   -webkit-animation: fadeIn 1s .3s both;
 }
 
+@media (min-width: 1400px) {
+  .nav__list--is-open {
+    animation: none;
+    -webkit-animation: none;
+  }
+}
+
 .nav__item {
   width: 100%;
   height: 100%;
@@ -399,6 +454,12 @@ html {
 
 .nav--is-open {
   height: 100vh;
+}
+
+@media (min-width: 1400px) {
+  .nav--is-open {
+    height: 10vh;
+  }
 }
 
 .header {
@@ -871,6 +932,12 @@ html {
   font-size: 2.8rem;
   text-align: center;
   z-index: 2;
+}
+
+@media (min-width: 768px) {
+  .services__heading {
+    font-size: 4rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -2004,6 +2071,7 @@ html {
   transition: .25s;
   -webkit-box-shadow: 0.6rem 0.6rem 0 0 #3781A1, inset 0.6rem 0.6rem 0 #3781A1;
           box-shadow: 0.6rem 0.6rem 0 0 #3781A1, inset 0.6rem 0.6rem 0 #3781A1;
+  cursor: pointer;
 }
 
 .btn:hover, .btn:focus {
