--- a/scss/partials/layout/_navigation.scss
+++ b/scss/partials/layout/_navigation.scss
@@ -6,12 +6,7 @@
     top: 0;
     left: 0;
     z-index: 2;
-
-    transition: height .3s ease-in-out;
-    -webkit-transition: height .3s ease-in-out;
-    -moz-transition: height .3s ease-in-out;
-    -ms-transition: height .3s ease-in-out;
-    -o-transition: height .3s ease-in-out;
+    transition: height .3s ease-in-out, background-color .1s ease-in-out;
     z-index: 3;
 
     @include screen(big-desktop) {
@@ -30,6 +25,8 @@
         background-position: center;
         background-size: cover;
         z-index: -3;
+        transition: transform .1s ease;
+        cursor: pointer;
 
         @include screen(mobile) {
             width: 80px;
@@ -53,6 +50,14 @@
             top: 2%;
         }
 
+        &--small {
+            transform: translateY(-33px) scale(0.6);
+            display: none;
+
+            @include screen(big-desktop) {
+                display: block;
+            }
+        }
 
     }
 
@@ -187,6 +192,12 @@
         &--is-open {
             animation: fadeIn 1s .3s both;
             -webkit-animation: fadeIn 1s .3s both;
+
+            @include screen (big-desktop) {
+                animation: none;
+                -webkit-animation: none;
+            }
+
         }
     }
 
@@ -257,10 +268,14 @@
     }
 
 
-
-
     &--is-open {
         height: 100vh;
 
+        @include screen (big-desktop) {
+            height: 10vh;
+
+        }
     }
+
+
 }
